# PNG-Metadata-Reader

./: .gitignore  CMakeLists.txt  README.md
src/: Image1.png_original  main.cpp
